# fast_zero

./: .coverage  .env  .project  alembic.ini  banco_de_dados.db  pyproject.toml
migracoes/: env.py
migracoes/versions/: 6d2f93433df5_adicionado_o_campo_update_at.py  9b34fb7e1c6f_criando_a_tabela_usuario.py  9de79fc342c1_retirando_o_campo_update_at_p_a_aula_05.py
src/fast_zero/: app_dedezao.py  coisas_do_banco.py  configuracoes.py  modelitos_dede.py  schemas_do_dedezao.py
testes_legais/: conftest.py  test_app_do_dedezao.py  test_bancao_de_dados.py  testasso_app_do_dedezao.py
tests/: conftest.py  test_app_do_dedezao.py
